force-app/main/default/objects/RegisteredEvent__c/RegisteredEvent__c.object-meta.xml
<CustomObject>
    <label>RegisteredEvent</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>RegisteredEvent</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RegisteredEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>