force-app/main/default/objects/RegisteredEvent__c/fields/MDEvents__c.field-meta.xml
<CustomField>
    <fullName>MDEvents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDEvents</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>RegisteredEvents</relationshipLabel>
    <relationshipName>RegisteredEvents</relationshipName>
    <type>Lookup</type>
</CustomField>