force-app/main/default/objects/RegisteredEvent__c/fields/MDUsers__c.field-meta.xml
<CustomField>
    <fullName>MDUsers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDUsers</label>
    <referenceTo>checkUser__c</referenceTo>
    <relationshipLabel>RegisteredEvents</relationshipLabel>
    <relationshipName>RegisteredEvents</relationshipName>
    <type>Lookup</type>
</CustomField>