force-app/main/default/objects/RegisteredEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MDEvents__c</columns>
    <columns>MDUsers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>